tests/reference/asr-kind1-5b1b058.stderr
semantic error: Kind 3 is not supported for Real
 --> tests/errors/kind1.f90:4:10
  |
4 |     real(3) :: x
  |          ^ 
